--- a/src/app.html
+++ b/src/app.html
@@ -1,12 +1,51 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="dark">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500&display=swap" rel="stylesheet">		
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
+
+		<style>
+			body {
+				/* font-family: Consolas, Monaco, "Andale Mono", monospace; */
+				font-family: 'Roboto', sans-serif;
+				min-height: 100vh;
+				letter-spacing: 0.1rem;
+				font-weight: 100;
+			}
+
+			html[data-theme='dark'] {
+				background-color: #1a1a1a;
+				color: #f5f5f7;
+			}
+
+			html[data-theme='dark'] a {
+				color: #f5f5f7;
+			}
+
+			html[data-theme='dark'] a:hover {
+				color: #007aff;
+			}
+
+			html[data-theme='light'] {
+				background-color: #ffffff;
+				color: #1a1a1a;
+			}
+
+			html[data-theme='light'] a {
+				color: #1a1a1a;
+			}
+
+			html[data-theme='light'] a:hover {
+				color: #007aff;
+			}			
+		</style>
 	</body>
 </html>
